Correction à la va-vite de la version mobile de la page 'Tous les articles'.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -354,6 +354,16 @@ body {
         }
       }
     }
+
+    div.page {
+      margin-left: 0;
+      width: initial;
+
+      div.entry {
+        margin-left: 0;
+        width: initial;
+      }
+    }
   }
 }
 
